--- a/src/components/keka-dropdown/keka-dropdown.css
+++ b/src/components/keka-dropdown/keka-dropdown.css
@@ -19,6 +19,11 @@
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 0.25rem;
+  max-height: 200px;
+}
+
+.scroll-y {
+  overflow-y: scroll;
 }
 
 
