--- a/src/components/keka-checkbox/keka-checkbox.css
+++ b/src/components/keka-checkbox/keka-checkbox.css
@@ -54,14 +54,14 @@ input[type="checkbox"].checked {
   border-color: #7F56D9;
 }
 
-input[type="checkbox"].disabled {
-  background-color: #F2F4F7;
-  border-color: #D0D5DD;
-}
-
 input[type="checkbox"].indeterminate {
   background-color: #7F56D9;
   border-color: #7F56D9;
+}
+
+input[type="checkbox"].disabled {
+  background-color: #F2F4F7;
+  border-color: #D0D5DD;
 }
 
 input[type="checkbox"]:not(.disabled):not(.checked):hover {
@@ -87,7 +87,7 @@ input[type="checkbox"].indeterminate::after {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 12.5px;
+  width: 10.5px;
   height: 0.96px;
   background-color: white;
   border-radius: 2px;
@@ -101,5 +101,9 @@ input[type="checkbox"].indeterminate:focus {
 }
 
 input[type="checkbox"].checked.disabled::after{
-  color:#D0D5DD;
+   color:#D0D5DD;
+}
+
+input[type="checkbox"].indeterminate.disabled::after{
+  background-color:#D0D5DD;
 }
