--- a/src/components/keka-input/keka-input.css
+++ b/src/components/keka-input/keka-input.css
@@ -15,6 +15,7 @@
   --secondary: #FDA29B;
   --primary-border:#d0d5d0;
   --disable-font:#667085;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .input-label {
@@ -91,7 +92,7 @@ input[type="text" i] {
   margin: 5px 10px;
   padding: 8px 12px;
   outline: none;
-  font-size: 10px;
+  font-size: 14px;
   border-radius: 5px;
   display: block;
   width: var(--input-width);
