updated avatar to scss

--- a/src/components/avatar-stack/avatar-stack.scss
+++ b/src/components/avatar-stack/avatar-stack.scss
@@ -1,17 +1,17 @@
+@import "../../global-scss/mixins";
 :host {
   display: block;
 }
 
-img {
+img{
   margin: 10% 0px;
   border-radius: 50%;
   border: 2% solid white;
 }
 
-.d-flex {
-  display: flex;
+.d-flex{
+  @include displayFlex;
 }
-
-.hide {
+.hide{
   display: none;
-}/*# sourceMappingURL=avatar-stack.css.map */
+}
