--- a/src/components/professional-avatar/professional-avatar.css
+++ b/src/components/professional-avatar/professional-avatar.css
@@ -1,48 +1,49 @@
 :host {
   display: block;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
-.d-flex{
+
+.d-flex {
   display: flex;
   align-items: center;
 }
 
-.capitalize{
+.capitalize {
   text-transform: capitalize;
 }
-p{
+
+p {
   margin: 0px;
 }
 
-.avatar-xl{
+.avatar-xl {
   font-size: 10px;
 }
 
-.font-size-xl{
+.font-size-xl {
   font-size: 16px;
 }
 
-.font-size-lg{
+.font-size-lg {
   font-size: 14px;
 }
 
-.font-size-md{
+.font-size-md {
   font-size: 14px;
 }
 
-.font-size-sm{
+.font-size-sm {
   font-size: 12px;
-  
-}
-.font-size-xs{
-  font-size: 10px; 
 }
 
-.display-none{
+.font-size-xs {
+  font-size: 10px;
+}
+
+.display-none {
   display: none;
 }
 
-.px-1{
+.px-1 {
   padding: 0px 5px;
-}
+}/*# sourceMappingURL=professional-avatar.css.map */
