--- a/src/components/progress-indicator/progress-indicator.css
+++ b/src/components/progress-indicator/progress-indicator.css
@@ -1,64 +1,62 @@
 :host {
   display: block;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.d-flex{
+.d-flex {
   display: flex;
   align-items: center;
   gap: 10px;
   font-size: 14px;
 }
-.rounded-edge{
+
+.rounded-edge {
   border-radius: 20px;
-  width: 320px;  
-  background-color:#ebe9ef;
-}
-.m-1{
-  margin:30px 20px;
-}
-.w-0{
-  width: 2%; 
-}
-.w-10{
-  width: 10%; 
-}
-.w-20{
-  width: 20%; 
-}
-.w-30{
-  width: 30%; 
-}
-.w-40{
-  width: 40%; 
+  width: 320px;
+  background-color: #ebe9ef;
 }
 
-.w-50{
-  width: 50%; 
+.avatar-container .m-1 {
+  margin: 30px 20px;
 }
-.w-60{
-  width: 60%; 
+.avatar-container .w-0 {
+  width: 2%;
 }
-
-.w-70{
-  width: 70%; 
+.avatar-container .w-10 {
+  width: 10%;
 }
-.w-80{
-  width: 80%; 
+.avatar-container .w-20 {
+  width: 20%;
 }
-
-.w-90{
-  width: 90%; 
+.avatar-container .w-30 {
+  width: 30%;
 }
-.w-100{
-  width: 100%; 
+.avatar-container .w-40 {
+  width: 40%;
 }
-
-.progress-bar{
-  border-radius: 20px;  
+.avatar-container .w-50 {
+  width: 50%;
+}
+.avatar-container .w-60 {
+  width: 60%;
+}
+.avatar-container .w-70 {
+  width: 70%;
+}
+.avatar-container .w-80 {
+  width: 80%;
+}
+.avatar-container .w-90 {
+  width: 90%;
+}
+.avatar-container .w-100 {
+  width: 100%;
+}
+.avatar-container .progress-bar {
+  border-radius: 20px;
   padding: 4px 0px;
-  background-color:#7F56D9;
+  background-color: #7F56D9;
 }
-.display-none{
+.avatar-container .display-none {
   display: none;
 }
